--- a/site/public/pricing/index.html
+++ b/site/public/pricing/index.html
@@ -39,7 +39,7 @@
       background-color: #ffffff !important;
     }
   </style>
-  
+
   <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
   <script type="text/plain" async class="optanon-category-2">
     window.dataLayer = window.dataLayer || [];
@@ -50,7 +50,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-110523681-1');
   </script>
-  
+
   <script>
     window.intercomSettings = {
       app_id: 'ep3ft8gg',
@@ -64,7 +64,7 @@
     heap.load("3553865455");
   </script>
 
-  
+
   <script type="text/javascript" class="optanon-category-2">
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -98,19 +98,19 @@
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
-        
+
         <form class="form-inline my-2 my-lg-0 ml-md-3">
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="login-button" href="https://app.checklyhq.com/">Log in</a>
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="dashboard-button" style="display: none;" href="https://app.checklyhq.com/">Dashboard<div class="ion-arrow-right-c d-inline ml-2"></div></a>
           <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a>
         </form>
-        
+
       </ul>
     </div>
   </div>
 </nav>
 
-  
+
   <div class="main">
     <div class="plans pt-3">
       <div class="container mb-3">
@@ -176,10 +176,10 @@
                 </div>
                 <div class="pt-list-item">
                   <span class="pt-tooltip-show-text"
-                    ><span class="pt-tooltip-show">Github triggers</span
+                    ><span class="pt-tooltip-show">GitHub triggers</span
                     ><span class="pt-tooltip pt-tooltip-right-bottom"
                       ><span class="pt-tooltip-content"
-                        >Automatically trigger checks from Github PR or
+                        >Automatically trigger checks from GitHub PR or
                         commits. Works out-of-the-box with Zeit, Heroku
                         etc.</span
                       ></span
@@ -300,7 +300,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -427,7 +427,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -551,7 +551,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -678,7 +678,7 @@
                       </div>
                     </div>
                     <div class="pt-list-item">
-                      <div class="pt-text">Github triggers</div>
+                      <div class="pt-text">GitHub triggers</div>
                       <div class="pt-value">
                         <i class="ion-checkmark-round"></i>
                       </div>
@@ -749,7 +749,7 @@ This gives us full insight into our availability and error budgets."</p><div cla
           </div>
           <div class="container">
             <div class="row">
-  
+
   <div class="col">
     <h4 id="what-are-api-checks">What are API checks?</h4>
 <p>API checks are monitors that issue POST, GET and other typical HTTP requests at API endpoints. You have full control
@@ -767,7 +767,7 @@ are the same for all check types.</p>
 Just <!-- raw HTML omitted -->contact us<!-- raw HTML omitted --> and we'll make you a quote.</p>
 
   </div>
-  
+
   <div class="col">
     <h4 id="are-all-alerting-integrations-the-same-for-all-plans">Are all alerting integrations the same for all plans?</h4>
 <p>All plans have SMS, email, webhook and Slack integrations to alert you when a check fails. From the Starter plan onwards
@@ -783,7 +783,7 @@ you owe: no double bookings. We will also add a proration line to your invoice.<
 <p>We accept Visa, Mastercard and American Express credit card payments. All payments are handled by Stripe.</p>
 
   </div>
-  
+
 </div>
 
 
@@ -856,7 +856,7 @@ you owe: no double bookings. We will also add a proration line to your invoice.<
   </div>
 </footer>
 
-  
+
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
