--- a/site/public/privacy/index.html
+++ b/site/public/privacy/index.html
@@ -39,7 +39,7 @@
       background-color: #ffffff !important;
     }
   </style>
-  
+
   <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
   <script type="text/plain" async class="optanon-category-2">
     window.dataLayer = window.dataLayer || [];
@@ -50,7 +50,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-110523681-1');
   </script>
-  
+
   <script>
     window.intercomSettings = {
       app_id: 'ep3ft8gg',
@@ -64,7 +64,7 @@
     heap.load("3553865455");
   </script>
 
-  
+
   <script type="text/javascript" class="optanon-category-2">
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -98,19 +98,19 @@
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
-        
+
         <form class="form-inline my-2 my-lg-0 ml-md-3">
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="login-button" href="https://app.checklyhq.com/">Log in</a>
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="dashboard-button" style="display: none;" href="https://app.checklyhq.com/">Dashboard<div class="ion-arrow-right-c d-inline ml-2"></div></a>
           <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a>
         </form>
-        
+
       </ul>
     </div>
   </div>
 </nav>
 
-  
+
   <div class="main container py-5">
     <div class="row">
       <div class="col-sm-12 col-lg-10 offset-lg-1">
@@ -129,7 +129,7 @@ activities may take place in the United States.</p>
 <ul>
 <li>We will not sell your data to anyone.</li>
 <li>We will send you some emails regarding product updates and such.</li>
-<li>If you log in with a third party provider (Google, Github etc.) we will read some data from that account.</li>
+<li>If you log in with a third party provider (Google, GitHub etc.) we will read some data from that account.</li>
 <li>We use services like Drift to chat with you and help you with support and sales related questions.</li>
 <li>We use services like Google Analytics and Heap to see how you interact with the product. You can opt out of both.</li>
 </ul>
@@ -146,8 +146,8 @@ Service, or if you desire to receive marketing materials and information. Inform
 such instances may include your IP address, full user name, password, email address, city, time zone,
 credit card and other billing information, preferences, telephone number, and other information that you decide
 to provide us with. We may link such information with other information you provide about yourself.</p>
-<h2 id="3-use-of-google-andor-github-user-data">3. Use of Google and/or Github User Data</h2>
-<p>If you choose to connect a Google profile or Github profile to your Checkly account, we will access certain information
+<h2 id="3-use-of-google-andor-github-user-data">3. Use of Google and/or GitHub User Data</h2>
+<p>If you choose to connect a Google profile or GitHub profile to your Checkly account, we will access certain information
 obtained from Google regarding your account. In particular we may store your name and email address.
 This data will only be used by Checkly to provide you with the service you expect and will not be shared with any third parties.</p>
 <h2 id="4-use-of-contact-information">4. Use of Contact Information</h2>
@@ -271,7 +271,7 @@ the breach and restore the reasonable integrity of the data system.</p>
   </div>
 </footer>
 
-  
+
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
