--- a/site/public/product/api-monitoring/index.html
+++ b/site/public/product/api-monitoring/index.html
@@ -39,7 +39,7 @@
       background-color: #ffffff !important;
     }
   </style>
-  
+
   <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
   <script type="text/plain" async class="optanon-category-2">
     window.dataLayer = window.dataLayer || [];
@@ -50,7 +50,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-110523681-1');
   </script>
-  
+
   <script>
     window.intercomSettings = {
       app_id: 'ep3ft8gg',
@@ -64,7 +64,7 @@
     heap.load("3553865455");
   </script>
 
-  
+
   <script type="text/javascript" class="optanon-category-2">
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -98,19 +98,19 @@
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
-        
+
         <form class="form-inline my-2 my-lg-0 ml-md-3">
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="login-button" href="https://app.checklyhq.com/">Log in</a>
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="dashboard-button" style="display: none;" href="https://app.checklyhq.com/">Dashboard<div class="ion-arrow-right-c d-inline ml-2"></div></a>
           <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a>
         </form>
-        
+
       </ul>
     </div>
   </div>
 </nav>
 
-  
+
   <div class="main container pt-5">
     <div class="row">
       <div class="col-sm-12">
@@ -122,40 +122,40 @@ monitoring solution to check your mobile, webapp or IOT API for performance, upt
 </p>
 
 <div class="row pt-4">
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Monitor for performance</h5>
   <p>Checkly records the response time for each request, down to TCP, DNS and first byte times. Add assertions for maximum response time.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Monitor for correctness</h5>
   <p>Check payloads, return codes, headers, and authentication. Dive inside JSON payloads and validate specific items.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Monitor globally</h5>
   <p>Checkly can monitor your APIs from 16 global data center locations.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Setup &amp; Teardown scripts</h5>
   <p>Run custom Javascript before and after your API check. Sign requests, get auth tokens and clean up test data.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Import from tools you know</h5>
   <p>Checkly's cUrl and Swagger API importers create fully fledged API checks with just a couple of clicks.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">CI/CD integration</h5>
-  <p>Integrate your API monitoring into your QA or continuous delivery process by triggering adhoc runs from Github or the command line.</p>
+  <p>Integrate your API monitoring into your QA or continuous delivery process by triggering adhoc runs from GitHub or the command line.</p>
 </div>
 
 </div>
@@ -246,7 +246,7 @@ Next to aggregating metrics, we give you <strong>access to each result</strong> 
 When a check fails, you and your team need timely and actionable insights to address any down time.
 Add Slack, SMS, email or Pagerduty: Checkly's alerts give you the right information whatever alerting medium you choose.
 Need more control? Webhooks give you full access to the JSON data we use ourselves for alerting.
- 
+
 <a class="cta-link" href="/product/alerting/">Learn more</a>
 
 </p>
@@ -259,7 +259,7 @@ Need more control? Webhooks give you full access to the JSON data we use ourselv
 Get a clear picture of how your services perform for all your users around the world. Run your check from any of sixteen
 data center locations spread over the Americas, EMEA and Asia Pacific.
 
- 
+
 <a class="cta-link" href="/docs/monitoring/global-locations/">Learn more</a>
 
 </p>
@@ -332,7 +332,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
   </div>
 </footer>
 
-  
+
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
