--- a/site/public/product/transaction-monitoring/index.html
+++ b/site/public/product/transaction-monitoring/index.html
@@ -39,7 +39,7 @@
       background-color: #ffffff !important;
     }
   </style>
-  
+
   <script type="text/plain" async src="https://www.googletagmanager.com/gtag/js?id=UA-110523681-1" class="optanon-category-2"></script>
   <script type="text/plain" async class="optanon-category-2">
     window.dataLayer = window.dataLayer || [];
@@ -50,7 +50,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-110523681-1');
   </script>
-  
+
   <script>
     window.intercomSettings = {
       app_id: 'ep3ft8gg',
@@ -64,7 +64,7 @@
     heap.load("3553865455");
   </script>
 
-  
+
   <script type="text/javascript" class="optanon-category-2">
     (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -98,19 +98,19 @@
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" target="_blank">Blog</a></li>
-        
+
         <form class="form-inline my-2 my-lg-0 ml-md-3">
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="login-button" href="https://app.checklyhq.com/">Log in</a>
           <a class="btn btn-outline-secondary my-2 my-sm-0 mr-3 ml-md-3" id="dashboard-button" style="display: none;" href="https://app.checklyhq.com/">Dashboard<div class="ion-arrow-right-c d-inline ml-2"></div></a>
           <a class="signup-button btn btn-success my-2 my-sm-0" data-signup="data-signup" href="https://app.checklyhq.com/signup">Start your free trial</a>
         </form>
-        
+
       </ul>
     </div>
   </div>
 </nav>
 
-  
+
   <div class="main container pt-5">
     <div class="row">
       <div class="col-sm-12">
@@ -123,37 +123,37 @@ correctness and performance of all your crucial click paths.
 </p>
 
 <div class="row pt-4">
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Real browsers</h5>
   <p>Your checks are run in actual Chrome browsers to achieve a 100% match with real world conditions. We run each session in a sealed of sandbox for extra security.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Validate all the things</h5>
   <p>In a Browser check you can check for specific content items, browser responses, visibility and error responses.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Screen shots</h5>
   <p>Take a screen shot at any stage in your transaction for quick and easy reference. You can take full page shots, or just a specific page element for more focus.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Monitor globally</h5>
   <p>We monitor your transactions from up to four data center locations around the world.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">CI/CD integration</h5>
-  <p>Integrate your Browser checks into your QA or continuous delivery process by triggering adhoc runs from Github or the command line.</p>
+  <p>Integrate your Browser checks into your QA or continuous delivery process by triggering adhoc runs from GitHub or the command line.</p>
 </div>
 
- 
+
 <div class="col-sm-4 mb-lg-3">
   <h5 class="add-star-before">Coding optional</h5>
   <p>Use our browser plugin to record a script and import it into Checkly. Want more control? Dive into the code and tweak your script to perfection.</p>
@@ -236,7 +236,7 @@ Recorder Chrome browser extension to get started ASAP.
 </p>
 
 <div class="row mb-lg-5">
- 
+
 <div class="col-sm-6 mb-lg-3">
   <h3 class="section-header">Example Library</h3>
   <p><p>Our examples library contains example scripts that cover a range of scenario's: from scraping content and validating text
@@ -265,7 +265,7 @@ This extension has a ton of options for tweaking your scripts as you click throu
 When a check fails, you and your team need timely and actionable insights to address any down time.
 Add Slack, SMS, email or Pagerduty: Checkly's alerts give you the right information whatever alerting medium you choose.
 Need more control? Webhooks give you full access to the JSON data we use ourselves for alerting.
- 
+
 <a class="cta-link" href="/product/alerting/">Learn more</a>
 
 </p>
@@ -278,7 +278,7 @@ Need more control? Webhooks give you full access to the JSON data we use ourselv
 Get a clear picture of how your services perform for all your users around the world. Run your check from any of sixteen
 data center locations spread over the Americas, EMEA and Asia Pacific.
 
- 
+
 <a class="cta-link" href="/docs/monitoring/global-locations/">Learn more</a>
 
 </p>
@@ -351,7 +351,7 @@ data center locations spread over the Americas, EMEA and Asia Pacific.
   </div>
 </footer>
 
-  
+
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
         integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
