fix: align public api content type label

--- a/src/api-docs/index.html
+++ b/src/api-docs/index.html
@@ -41,17 +41,13 @@
       }
 
       .react-tabs__tab-panel span:first-of-type {
-        top: -15px;
+        left: 0px !important;
+        top: -16px !important;
         color: white !important;
       }
 
       .react-tabs__tab {
         background: #E0E6ED !important;
-      }
-
-      .eizqEX {
-        top: -15px !important;
-        font-weight: 400 !important;
       }
 
       .eizqEX, .bvqruL {
